include $(top_srcdir)/Makefile.am.include

bin_PROGRAMS = build_tree traverse kernel fmm
build_tree_SOURCES = build_tree.cxx
build_tree_CPPFLAGS = $(AM_CPPFLAGS)
traverse_SOURCES = traverse.cxx
traverse_CPPFLAGS = $(AM_CPPFLAGS)
kernel_SOURCES = kernel.cxx
kernel_CPPFLAGS = $(AM_CPPFLAGS)
fmm_SOURCES = fmm.cxx
fmm_CPPFLAGS = $(AM_CPPFLAGS)

TESTS = $(bin_PROGRAMS)
